# sabidgemin

./: Cargo.toml  LICENSE  README.ja.md  README.md
src/: addon_generater.rs  config.json  main.rs  readme(使い方).txt
src/addon_template/templateBP/animation_controllers/: templete.json
src/addon_template/templateBP/entities/: template.json
src/addon_template/templateBP/items/: template.json
src/addon_template/templateBP/loot_tables/entities/: template.json
src/addon_template/templateBP/recipes/: template.json
src/addon_template/templateBP/spawn_rules/: template.json
src/addon_template/templateRP/textures/: item_texture.json
src/translation/: en.json  jp.json
