[package]
name = "sabidgemin"
version = "1.0.5"
authors = ["Eleven-junichi2 <junichinomori@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
copy_dir = "0.1.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
